After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744868 - Strings not marked as translatable
Strings not marked as translatable
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-02-20 20:17 UTC by Piotr Drąg
Modified: 2015-02-21 00:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Piotr Drąg 2015-02-20 20:17:19 UTC
Commit https://git.gnome.org/browse/totem/commit/?id=dd42ebd45cf39bbdd8b1d5dd0fb0682c00d46b41 adds new UI strings, but some of them are not marked for translation.
Comment 1 Bastien Nocera 2015-02-21 00:49:05 UTC
Fixed in master, thanks!