backend: Mark strings as translatable

A few missing strings in dd42ebd45cf39bbdd8b1d5dd0fb0682c00d46b41

https://bugzilla.gnome.org/show_bug.cgi?id=744868